--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar color="primary" class="example-toolbar">
-  <button mat-icon-button (click)="isExpanded = !isExpanded"><mat-icon>menu</mat-icon></button>
-  <h1 class="example-app-name">Nested Menus</h1>
+  <!-- <button mat-icon-button (click)="isExpanded = !isExpanded"><mat-icon>menu</mat-icon></button> -->
 </mat-toolbar>
 <mat-sidenav-container class="example-container" autosize>
   <mat-sidenav #sidenav class="example-sidenav" mode="side" opened="true" (mouseenter)="mouseenter()" (mouseleave)="mouseleave()">
@@ -212,5 +211,5 @@
     </mat-nav-list>
   </mat-sidenav>
 
-  <mat-sidenav-content class="mat-drawer-content mat-sidenav-content ng-star-inserted" style=" margin-left: 214.8vh; width: 100%;"></mat-sidenav-content>
+  <mat-sidenav-content class="mat-drawer-content mat-sidenav-content ng-star-inserted" style=" margin-left: 212.2vh; width: 100%;"></mat-sidenav-content>
 </mat-sidenav-container>
